--- a/src/Signin/Sign.css
+++ b/src/Signin/Sign.css
@@ -1,3 +1,72 @@
 .curved{
-    
+    background-color: #A57CE6;
+    width: 500px;
+    height: 600px;
+  
 }
+
+.divright{
+    width: 100px;
+
+}
+
+.form1{
+    background-color: white;
+   
+    width: 300px;
+   
+
+}
+.h1{
+    font-size: 30px;
+    text-align: center;
+    font-weight: bold;
+
+}
+.insidediv{
+   
+}
+.insidediv2{
+   
+}
+.forget{
+    width: 300px;
+}
+.signin{
+    align-items: center;
+    margin-top: 35px;
+
+}
+
+.card{
+  background-color: #A57CE6;
+  color: white;
+  padding: 1rem;
+  height: 4rem;
+
+}
+.card2{
+    background-color: #A57CE6;
+    color: white;
+    padding:1rem;
+    height: 36rem;
+    margin-left: 3rem;
+    margin-top: -3.1rem;
+  
+  }
+  
+.cards{
+  max-width: 1200px;
+  display: grid;
+  gap: 1rem;
+  
+}
+.centered{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@media (min-width: 900px) {
+    .cards { grid-template-columns: repeat(2, 1fr); }
+  }
