--- a/src/Content Schedule/contentCate.css
+++ b/src/Content Schedule/contentCate.css
@@ -1,8 +1,15 @@
 .a {
     width: 1300px;
-    height: 400px;
+    height: 100px;
     border-collapse: collapse;
     margin-left: -20px;
+  }
+  .b {
+    width: 1300px;
+    height: 50px;
+    border-collapse: collapse;
+    margin-left: -20px;
+
   }
   
 .a th {
@@ -13,4 +20,8 @@
 .a td {
     text-align: center;
     border: 1px solid #EFEFEF;
+  }
+
+  .c{
+
   }
