--- a/src/Signin/Sign.css
+++ b/src/Signin/Sign.css
@@ -2,6 +2,7 @@
     background-color: #A57CE6;
     width: 500px;
     height: 600px;
+    float: left;
   
 }
 
@@ -67,6 +68,4 @@
     align-items: center;
 }
 
-@media (min-width: 900px) {
-    .cards { grid-template-columns: repeat(2, 1fr); }
-  }
+
